<resources>
    <string name="app_name">BeerTrack</string>
    <string name="drink">Drink</string>
    <string name="price">Price</string>
    <string name="zero_price">0$</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="tip">Tip 7%</string>
    <string name="initial_amount">1</string>
    <string name="add">Add</string>
    <string name="change_amount">Change amount</string>
    <string name="change_costs">Change price</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="price_placeholder">%.2f $</string>
    <string name="paid">Paid</string>
    <string name="everything_paid">All paid. Awesome!</string>
    <string name="name_must_not_be_empty">Name must not be empty</string>
    <string name="price_must_be_over_0">Price must be over 0$</string>
    <string name="amount_must_be_over_0">Amount must be over 0</string>
    <string name="edit">Edit:</string>
    <string name="currency">$</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="abort">Abort</string>
</resources>
