<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.2"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/drink_name_textView"
            android:hint="@string/drink"
            android:selectAllOnFocus="true"
            android:layout_width="216dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/currency_string"
                android:text="@string/currency"
                android:textColor="@color/text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/drink_costs_textView"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/amount_up"
            android:scaleType="center"
            android:scaleX="2"
            android:scaleY="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp"
            android:contentDescription="@string/increase" />

        <TextView
            android:id="@+id/amount_edit_textView"
            android:text="@string/initial_amount"
            android:textColor="@color/text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/amount_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
            android:scaleType="center"
            android:scaleX="2"
            android:scaleY="2"
            android:contentDescription="@string/decrease"/>
    </LinearLayout>
</LinearLayout>