<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/drink_name_textView"
            android:hint="@string/drink"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/currency_string"
                android:text="@string/currency"
                android:textColor="@color/text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/drink_costs_textView"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>