<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drinkBackground"
    android:elevation="@dimen/elevation"
    android:id="@+id/outerLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/drink"
        android:id="@+id/drink_header_textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initial_amount"
        android:id="@+id/amount_textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/price"
        android:id="@+id/cost_textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textAlignment="center" />

</LinearLayout>